--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@
   
 }
 .nation-icon {
-  background-image: url("./assets/nation-flag.png");
+  background-image: url("nation-flag.png");
   background-size: contain;
   height: 17px;
   width: 26px;
@@ -170,7 +170,7 @@ span {
 
 /* HERO SECTION */
 .hero-section {
-  background-image: url("./assets/hero.jpg");
+  background-image: url("hero.jpg");
   background-size: cover;
   height: 400px;
   display: flex;
@@ -262,7 +262,7 @@ ul a {
   align-items: center;
 }
 .logo {
-  background-image: url("./assets/amazonelogo.webp");
+  background-image: url("amazonelogo.webp");
   background-size: cover;
   height: 50px;
   width: 100px;
